# cli-snake4c

./: .gitignore  CMakeLists.txt  README.md
include/core/: snake_game_core.h  snake_game_core_cycle.h
include/share/: snake_game_data.h
include/utils/: argparser.h
include/view/: snake_controle.h  snake_view.h
src/: main.c
src/core/: snake_game_core.c  snake_game_core_sycle.c
src/utils/: argparser.c
src/view/: snake_controle.c  snake_view.c
